--- a/MatematicaApp/src/main/res/layout/activity_send_mail.xml
+++ b/MatematicaApp/src/main/res/layout/activity_send_mail.xml
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/apptheme_btn_default_holo_light"
-            android:onClick="send_me_mail"
+            android:onClick="sendMeMail"
             android:text="@string/send"/>
 
     </LinearLayout>
